# template_cmake

./: CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  cbuild.sh
src/: CMakeLists.txt
